additional api endpoints tested
